--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ body {
     transition: background 0.6s;
     -webkit-transition: background 0.6s;
     -moz-transition: background 0.6s;
+    cursor:pointer;
+  }
+  .huecos.incorrecto {
+    visibility: hidden; 
   }
   
   #colores {
@@ -35,6 +39,8 @@ body {
   
   #rgb {
     font-size: 200%;
+    color: white; 
+    text-align: center; 
   }
   
   #stripe {
@@ -44,10 +50,7 @@ body {
     color: black;
   }
   
-  .selected {
-    color: white;
-    background: steelblue;
-  }
+
   
   button {
     border: none;
@@ -62,15 +65,14 @@ body {
     -webkit-transition: all 0.3s;
     -moz-transition: all 0.3s;
     outline: none;
+    
   }
   
   #mensaje {
     display: inline-block;
+    text-align: center;
     width: 20%;
+    color: white;
   }
   
-  button:hover {
-    color: white;
-    background: steelblue;
-  }
   
